--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         document.getElementById("loginForm").addEventListener("submit", function(event) {
             console.log("Submitting to Google Sheets...");
             setTimeout(function() {
-                window.location.href = "https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.postermywall.com%2Findex.php%2Fart%2Ftemplate%2F6fd0579ec2f19e1e4ed72be98cacc13c%2Fwelcome-to-my-web-template-design&psig=AOvVaw3bmnOi-DM_nRgOya-iVCVT&ust=1741949391410000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLD9zqjxhowDFQAAAAAdAAAAABAE";
+                window.location.href = "https://saraswathikumar.wordpress.com";
             }, 500); // Redirect after 0.5 seconds
         });
     </script>
